# spotmicro

./: README.md  pi_ros_remote.sh
hardware_manager/: CMakeLists.txt  package.xml
motion_control/: README.md  motion_hw_sim_plugin.xml  package.xml
motion_control/cfg/: DiscontinuousGait.cfg  Walk.cfg
motion_control/include/motion_control/: motion_hardware_interface.h  servo.h  simple_interface.h
motion_control/include/motion_controller/: discontinuous_gait_controller.h  gait_controller.h  servo_pwm_controller.h  walk_controller.h
motion_control/include/motion_hw/: gait_hw.h  joint_hw.h  leg_ik.h
motion_control/include/motion_hw_sim/: gait_hw_sim.h
motion_control/msg/: ServoConfig.msg
motion_control/scripts/: config_servo_gui.py
motion_control/src/: motion_controller.cpp  motion_hw.cpp  motion_hw_sim.cpp
motion_control/srv/: EnableServo.srv
servo_driver/: CMakeLists.txt
servo_driver/src/: servo_driver.cpp
spotmicro/: CMakeLists.txt  pi_ros_remote.sh
spotmicro/config/: config_servo.yaml  leg_joint_pid.yaml  leg_joints.yaml  motion_controllers.yaml  servo_config.yaml
spotmicro/hardware_manager/src/: combined_hw_manager.cpp
spotmicro/launch/: bringup.launch  config_servo.launch  gazebo_sim.launch  machine.launch  pi.launch
spotmicro/motion_control/: CMakeLists.txt  README.md  motion_controller_plugin.xml  motion_hw_plugin.xml  package.xml
spotmicro/motion_control/cfg/: Walk.cfg
spotmicro/motion_control/include/motion_control/: discontinuous_gait_controller.h  gait_controller.h  gait_datatype.h  joint_hw.h  leg_ik.h  walk_controller.h
spotmicro/motion_control/include/motion_controller/: discontinuous_gait_controller.h  walk_controller.h
spotmicro/motion_control/include/motion_hw/: joint_hw.h  leg_ik.h
spotmicro/motion_control/src/: gait_controllers.cpp  joint_hw.cpp  servo_pwm_controller.cpp  walk_controller.cpp
spotmicro/motion_control/srv/: ConfigServo.srv
spotmicro/rviz/: bringup.rviz  temp.rviz
spotmicro/servo_driver/: CMakeLists.txt  package.xml
spotmicro/servo_driver/include/servo_driver/: i2c_pwm.h
spotmicro/spotmicro/: package.xml
spotmicro/spotmicro/config/: leg_joints.yaml  motion_control.yaml  motion_control_sim.yaml  motion_controllers.yaml  motion_hw.yaml
spotmicro/spotmicro/launch/: bringup.launch  gazebo_sim.launch  machine.launch  motion_control.launch
spotmicro/spotmicro/rviz/: config_servo.rviz
spotmicro/spotmicro/urdf/: spotmicro.xacro
spotmicro/spotmicro_teleop/: CMakeLists.txt
spotmicro/spotmicro_teleop/include/spotmicro_teleop/: spotmicro_teleop.h
spotmicro/spotmicro_teleop/src/: gamepad.cpp
spotmicro/stability_analysis/: CMakeLists.txt  README.md
spotmicro/stability_analysis/launch/: static_stability.launch
spotmicro/urdf/: common.xacro  spotmicro.xacro
spotmicro_teleop/: README.md  package.xml
spotmicro_teleop/include/spotmicro_teleop/: gamepad.h
spotmicro_teleop/launch/: gamepad.launch
stability_analysis/: package.xml
stability_analysis/src/: static_stability.cpp
