<?xml version="1.0"?>
<package format="2">
  <name>motion_control</name>
  <version>0.0.0</version>
  <description>The motion_control package</description>
  <maintainer email="hyansuper@foxmail.com">hyan</maintainer>
  
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>  
  <depend>message_generation</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros_control</depend>

  <export>
    <controller_interface plugin="${prefix}/motion_controller_plugin.xml"/>
    <hardware_interface plugin="${prefix}/motion_hw_plugin.xml"/>
    <gazebo_ros_control plugin="${prefix}/motion_hw_sim_plugin.xml"/>
  </export>
</package>
